<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_gray"
        android:title="@string/title_home"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_hot"
        android:icon="@drawable/ic_whatshot_gray"
        android:title="@string/title_hot" />
    <item
        android:id="@+id/navigation_subscribe"
        android:icon="@drawable/ic_share_gray"
        android:title="@string/title_subscribe" />
    <item
        android:id="@+id/navigation_letter_box"
        android:icon="@drawable/ic_dashboard_black"
        android:title="@string/title_letter_box" />
    <item
        android:id="@+id/navigation_cubby_hole"
        android:icon="@drawable/ic_notifications_black"
        android:title="@string/title_cubby_hole" />

</menu>
